Change css to prevent horizontal scrolling.

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@ html,
 body {
   height: 100%;
   margin: 0;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 body {
   font-family: "Josefin Sans", sans-serif;
